--- a/public/template_style.css
+++ b/public/template_style.css
@@ -17,12 +17,12 @@
 	font-weight: bold;
 }
 
-.navbar-brand {
+/*.navbar-brand {
 	display: flex;
 	margin: 30px auto;
-}
+}*/
 
-.nama {
+/*.nama {
 	display: flex;
 	align-items: center;
 	margin-left: 30px;
@@ -31,4 +31,4 @@
 
 .navbar-brand img {
 	margin: 30px auto;
-}
+}*/
