--- a/public/template_style.css
+++ b/public/template_style.css
@@ -1,34 +1,35 @@
-.carousel-item {
-	height: 600px;
-	transition: transform 3s ease, opacity .5s ease-out
+nav {
+	height: 70px;
+	background-color:  #D4E6F1;
 }
 
-.carousel-item img {
-	margin-top: -120px;
+
+.jumbotron {
+	background-image: url(/img/gambar-2.jpg);
+	background-size: cover;
+	height: 570px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
 }
 
-.nav-item a{
-	font-size: 20px;
+.judul-besar{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
-.carousel-item .display-4{
-	margin-top: -240px;
+.judul-besar h1 {
 	font-size: 70px;
-	font-weight: bold;
+	color: white;
 }
 
-.carousel-item.active,
-.carousel-item-next,
-.carousel-item-prev {
-  display: block;
+.judul-besar p {
+	color: white;
+	font-size: 24px;
 }
 
-.pemisah {
-	margin-top: 50px;
-	margin-bottom: 50px;
-	text-align: center;
-}
-
-.card {
-	border: 0;
+.row img{
+	width: 100%;
+    height: 15vw;
 }
