--- a/public/template_style.css
+++ b/public/template_style.css
@@ -1,6 +1,5 @@
 nav {
 	height: 70px;
-	background-color:  #D4E6F1;
 }
 
 
@@ -33,3 +32,13 @@ nav {
 	width: 100%;
     height: 15vw;
 }
+
+.card-group {
+	width: 100%;
+	display: flex;
+	border: none;
+}
+
+/*.card-group.card {
+	border: 0px;
+}*/
