--- a/public/template_style.css
+++ b/public/template_style.css
@@ -1,36 +1,17 @@
-nav {
-	height: 70px;
+.my-carousel img {
+	height: 650px;
 }
 
+.my-carousel {
+	margin-bottom: 100px;
+}
 
-.jumbotron {
-	background-image: url(/img/gambar-2.jpg);
-	background-size: cover;
-	height: 570px;
+.carousel-caption{
+	margin-bottom: 200px;
+	text-align: left;
+}
+.side-camat img{
 	width: 100%;
-	display: flex;
-	justify-content: center;
-}
-
-.judul-besar{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-}
-
-.judul-besar h1 {
-	font-size: 70px;
-	color: white;
-}
-
-.judul-besar p {
-	color: white;
-	font-size: 24px;
-}
-
-.row img{
-	width: 100%;
-    height: 15vw;
 }
 
 .card-group {
@@ -39,6 +20,10 @@ nav {
 	border: none;
 }
 
-/*.card-group.card {
-	border: 0px;
-}*/
+h5 {
+	font-size: 15px;
+}
+
+.side-camat h4{
+	margin-bottom: 33px;
+}
