--- a/public/template_style.css
+++ b/public/template_style.css
@@ -1,18 +1,28 @@
 .navbar {
-	background-color: #b50404;
+	background-color: #f6a607;
 }
+
+.my-carousel {
+	width: 100%;
+}
+
 
 .my-carousel img {
 	height: 667px;
 	opacity: 0.9;
 }
 
+.carousel-item {
+	transition: transform 2s ease, opacity .10s ease-out;
+}
+
 .carousel-caption{
 	margin-bottom: 200px;
 	text-align: left;
+	transform-origin: left;
 }
 
-.ml10 {
+.ml10, .ml10v2, .ml10v3 {
   position: relative;
   font-weight: 900;
   font-size: 59px;
@@ -34,23 +44,32 @@
 }
 
 
-.ml16 {
-  color: #402d2d;
-  padding: 40px 0;
-  font-weight: 800;
-  font-size: 2em;
-  text-transform: uppercase;
-  letter-spacing: 0.5em;
-  overflow: hidden;
+.ml14 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.1em;
+  padding-right: 0.05em;
+  padding-bottom: 0.15em;
 }
 
-.ml16 .letter {
+.ml14 .line {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background-color: #fff;
+  transform-origin: 100% 100%;
+  bottom: 0;
+}
+
+.ml14 .letter {
   display: inline-block;
   line-height: 1em;
 }
 
 .selamat-datang {
-	background-color: #b50404;
+	background-color: #4c1a1b;
 	height: 75px;
 	display: flex;
 	justify-content: center;
@@ -69,7 +88,7 @@
 }
 
 .selamat-datang-dua {
-	background-image: url(/img/blur-bulsar.png);
+	background-image: url(/img/hero2.jpg);
 	height: 243px;
 	display: flex;
 	justify-content: center;
@@ -96,15 +115,15 @@
 
 .judul-selamat-datang-dua h3 {
 	display: flex;
-	font-family: sans-serif;
-	color: #b50404;
+	/*font-family: sans-serif;*/
+	color: white;
 	text-align: center;
 }
 
 .judul-selamat-datang-dua .garis{
 	height: 4px;
 	width: 100px;
-	background-color: #b50404;
+	background-color: #4c1a1b;
 	margin-bottom: 30px;
 }
 
@@ -123,7 +142,7 @@
 
 
 .konten-satu{
-	background-color: #132b57;
+	background-color: #f6a607;
 	padding: 50px;
 }
 
@@ -133,6 +152,7 @@
 	justify-content: center;
 	text-align: center;
 	align-content: center;
+	margin-bottom: 50px;
 }
 
 .judul-besar h5 {
@@ -140,12 +160,12 @@
 }
 
 .judul-besar h2 {
-	color: #b50404;
+	color: #4c1a1b;
 }
 
 .judul-besar .garis{
 	height: 4px;
-	background-color: #b50404;
+	background-color: #4c1a1b;
 	margin-bottom: 30px;
 }
 
@@ -165,3 +185,9 @@
 	align-content: center;
 	text-align: center;
 }
+
+/*.berita {
+	display: flex;
+	justify-content: center;
+	align-content: center;
+}*/
