--- a/public/template_style.css
+++ b/public/template_style.css
@@ -114,7 +114,7 @@
 }
 
 .judul-selamat-datang-dua h3 {
-	display: flex;/
+	display: flex;
 	color: white;
 	text-align: center;
 }
@@ -240,4 +240,28 @@
 	justify-content: center;
 	margin-bottom: 0;
 
+}
+
+.header-halaman {
+	display: flex;
+	font-family: 'Open Sans', sans-serif;	
+	margin-top: 50px;
+	background-color: lightcyan;
+	padding: 20px;
+	box-sizing: border-box;
+	justify-content: space-between;
+}
+
+.berita-di-halaman{
+
+	margin-top: 50px;
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	text-align: center;
+}
+
+
+.desa-ku {
+	margin-top: 50px;
 }
