--- a/public/template_style.css
+++ b/public/template_style.css
@@ -244,7 +244,7 @@
 
 .header-halaman {
 	display: flex;
-	font-family: 'Open Sans', sans-serif;	
+	font-family: inherit;	
 	margin-top: 50px;
 	background-color: lightcyan;
 	padding: 20px;
@@ -265,3 +265,4 @@
 .desa-ku {
 	margin-top: 50px;
 }
+
